static link scuttle binary
by static linking the binary, we enable scuttle to be used in places
which aren't shipping libc such as a binary in a docker scratch image.

--- a/docker/stretch/Dockerfile
+++ b/docker/stretch/Dockerfile
@@ -2,7 +2,7 @@ FROM golang:stretch AS build
 COPY . /app
 WORKDIR /app
 RUN go get -d
-RUN go build -o scuttle
+RUN CGO_ENABLED=0 go build -o scuttle
 
 FROM debian:stretch AS final
 WORKDIR /app
