--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,7 +14,7 @@ jobs:
           go get github.com/cenk/backoff
           go get github.com/monzo/typhon  
           go test -test.timeout 30s 
-          GOOS=linux GOARCH=amd64 go build -o build/linux/amd64/scuttle
+          CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o build/linux/amd64/scuttle
 
       ################################################
       # Create Github release if this is a tag push
