--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,11 +10,13 @@ jobs:
         uses: actions/checkout@v1
       
       - name: Build
+        env:
+          CGO_ENABLED: 0
         run: |
           go get github.com/cenk/backoff
           go get github.com/monzo/typhon  
           go test -test.timeout 30s 
-          CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o build/linux/amd64/scuttle
+          GOOS=linux GOARCH=amd64 go build -o build/linux/amd64/scuttle
 
       ################################################
       # Create Github release if this is a tag push
