--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,8 +19,11 @@ jobs:
         go-version: ^1.13
       id: go
 
-    - name: Check out code into the Go module directory
+    - name: Check out code into GOPATH
       uses: actions/checkout@v2
+      with:
+        fetch-depth: 1
+        path: go/src/github.com/monzo/envoy-preflight
 
     - name: Get dependencies
       run: |
