--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,10 +23,10 @@ jobs:
       uses: actions/checkout@v2
       with:
         fetch-depth: 1
-        path: go/src/github.com/monzo/envoy-preflight
+        path: /go/src/github.com/monzo/envoy-preflight
 
     - name: Get dependencies
-      working-directory: go/src/github.com/monzo/envoy-preflight
+      working-directory: /go/src/github.com/monzo/envoy-preflight
       run: |
         go get -v -t -d ./...
         if [ -f Gopkg.toml ]; then
@@ -35,5 +35,5 @@ jobs:
         fi
 
     - name: Build
-      working-directory: go/src/github.com/monzo/envoy-preflight
+      working-directory: /go/src/github.com/monzo/envoy-preflight
       run: go build -v .
