--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,6 +30,7 @@ jobs:
       working-directory: go/src/github.com/primeroz/envoy-preflight
       env:
         GOPATH: ${{ github.workspace	}}/go
+        GO111MODULE: off
       run: |
         go get -v -t -d ./...
         if [ -f Gopkg.toml ]; then
