--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,7 +32,7 @@ jobs:
         GOPATH: ${{ github.workspace	}}/go
         GO111MODULE: off
       run: |
-        go get -v -t -d ./...
+        #go get -v -t -d ./...
         if [ -f Gopkg.toml ]; then
             curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
             ${{ github.workspace }}/go/bin/dep ensure
