--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Set up Go 1.x
       uses: actions/setup-go@v2
       with:
-        go-version: ^1.13
+        go-version: 1.15
       id: go
 
     - name: Check out code into GOPATH
@@ -30,9 +30,8 @@ jobs:
       working-directory: go/src/github.com/primeroz/envoy-preflight
       env:
         GOPATH: ${{ github.workspace	}}/go
-        GO111MODULE: off
       run: |
-        #go get -v -t -d ./...
+        go get -v -t -d ./...
         if [ -f Gopkg.toml ]; then
             curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
             ${{ github.workspace }}/go/bin/dep ensure
