--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,4 +1,4 @@
-name: Build
+name: GoReleaser
 
 on:
   push:
@@ -16,13 +16,19 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Setup
         uses: actions/setup-go@v2
         with:
           go-version: "^1.13"
 
-      - name: Release
+      - name: GoReleaser
+        uses: goreleaser/goreleaser-action@v2
         with:
+          distribution: goreleaser
+          version: latest
+          args: release --rm-dist
+        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: curl -sL https://git.io/goreleaser | bash
