--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,7 +15,7 @@ defaults:
 jobs:
   build:
     name: Golang
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -23,7 +23,7 @@ jobs:
       - name: Setup
         uses: actions/setup-go@v2
         with:
-          go-version: "^1.13"
+          go-version: "^1.20"
 
       - name: Build & Test
         run: go test -timeout 30s
