--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,7 +12,7 @@ defaults:
 jobs:
   depoy:
     name: Goreleaser
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -22,7 +22,7 @@ jobs:
       - name: Setup
         uses: actions/setup-go@v2
         with:
-          go-version: "^1.13"
+          go-version: "^1.20"
 
       - name: GoReleaser
         uses: goreleaser/goreleaser-action@v2
